src/common/less/screen-paint.less
.screen.paint {

  .area.top {
    top: 0;
    left: 0;
    right: 0;
    height: 39px;
    background: @light;
    border-top: 1px solid @dark;
  }

   .ToolComponent {

    height: 40px;
    line-height: 40px;

    i.icon {
      display: block;
      float: left;
      width: 40px;
      height: 40px;
      line-height: 40px;
      font-size: @large;
      text-align: center;
      margin-right: 5px;
    }

    &>span {
      float: left;
      height: 20px;
      margin: 9px 10px 0 0;
      line-height: 20px;
    }

    button {
      float: left;
      margin: 8px 2px 0 0;
    }

    input[type=color] {
      float: left;
    }

    input[type=range] {
      margin: 15px 10px 0 10px;
      float: left;
    }

    input[type=number] {
      height: 20px;
      width: 3.1em;
      margin: 8px 5px 0 0;
      float: left;
    }

    ul {
      float: left;
      margin: 3px 0 0 5px;
    }

    li {
      line-height: 16px;
    }

    .palette {
      position: relative;

      .switch {
        float: left;
        position: relative;
        cursor: pointer;
        width: 103px;

        .list {
          width: 250px;
          float: left;
          display: none;
          background: @light;
          margin-top: -1px;

          li {
            padding: 5px;
          }

          li:hover {
            background: @medium;
          }
        }
      }

      .switch-arrow {
        position: absolute;
        top: 8px;
        left: 3px;
      }

      .name {
        float: left;
        margin-right: 5px;
        width: 52px;
      }

      .outer {
        position: absolute;
        left: 220px;
        right: 17px;
        height: 38px;
        overflow: hidden;
      }

      .inner {
        height: 36px;
        width: 0; // this is set via JS in Palette.setInnerWidth
      }

      .scroll {
        height: 26px;
        width: 10px;
        margin-top: 6px;

        i {
          position: relative;
          left: -.5em;
        }

        &.right {
          float: right;
        }
      }
    }

    .colorswatch {
      float: left;
      margin-top: 6px;
      margin-right: 2px;
      cursor: pointer;
    }

    .spacer {
      float: left;
      width: 1.5em;
    }
  }

  #EyedropperSwatch {
    margin-top: 6px;
    margin-left: 4px;
  }

  .area.left {
    top: 40px;
    left: 0;
    bottom: 0;
    width: 43px;
    //overflow-y: auto;
    border: 1px solid @dark;
    background: @dark;
  }

  .area.left:after {
    background: none;
    width: 0;
    border-left: 1px solid #3a3a3a;
    border-right: 1px solid #2d2d2d;
    content: "";
    display: block;
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    pointer-events: none;
  }

  #ToolBox {
    float: left;
    width: 40px;
    background: @light;
    height: 100%;

    &>div {
      border-top: 1px solid #6a6a6a;
    }
  }

  .ToolBoxTool {
    width: 36px;
    height: 36px;
    float: left;
    margin: 2px 2px 0 2px;
    font-size: @large;
    color: @font-color;
  }

  #RectangularSelectionTool > i,
  #PaintBucketTool > i {
    position: relative;
    left: -.2em;
  }

  .area.center {
    top: 40px;
    left: 45px;
    right: 205px;
    bottom: 27px;
    background: @dark;
    z-index: 0;
    overflow: auto;
  }

  #StageBox {
    position: absolute;
    top: 0;
    left: 0;
    z-index: 1;

    .Layer {
      position: absolute;
      top: 0;
      left: 0;
      z-index: 0;
    }

    #StageBoxCursorCanvas {
      cursor: none;
      z-index: 10000002;
    }

    #StageBoxSelectionCanvas {
      z-index: 10000001;
    }

    #StageBoxGridCanvas {
      z-index: 10000000;
      opacity: .5;
    }

    #StageBoxBackground {
      .Layer;
      z-index: -1;
      width: 100%;
      height: 100%;
    }
  }

  #ReferenceImage {
    position: relative;
    z-index: 0;
    cursor: move;

    img {
      border: 1px solid @medium;
    }

    .remove {
      @size: 20px;

      position: absolute;
      top: -@size/2;
      right: -@size/2;
      width: @size;
      height: @size;
      border-radius: 100%;
      padding-left: @size/4;
      opacity: 0;
      transition: opacity 150ms ease;

      &:after {
        display: none;
      }
    }
  }

  #ReferenceImage:hover {
    .remove {
      opacity: 1;
    }
  }

  .area.right {
    top: 40px;
    right: 0;
    bottom: 0;
    width: 203px;
    border: 1px solid @dark;
    background: @dark;
  }

  .area.right:after {
    background: none;
    width: 0;
    border-left: 1px solid #2d2d2d;
    border-right: 1px solid #3a3a3a;
    content: "";
    display: block;
    position: absolute;
    top: 0;
    left: 0;
    bottom: 0;
    pointer-events: none;
  }

  .actions {
    width: 100%;
    height: 23px;
    line-height: 23px;
    float: left;
    position: relative;
  } // .actions

  #layerboxhelper {
    float: left;
    width: 100%;
  }

  #PreviewBox {
    .foldable-fold {
      text-align: center;
    }

    #PreviewBoxPreview {
      margin-top: 4px;
      border: 1px solid @medium;
    }
  }

  #FrameBox {

    #FrameBoxFrames {
      margin: 5px auto;
    }

    .frame {
      border: 1px solid @medium;
      background: @light;
      cursor: pointer;
      position: relative;
      z-index: 1;
      border-collapse: collapse;
      display: inline-table;
      margin-top: -1px;
      margin-left: -1px;

      &.selected {
        z-index: 2;
        border: 1px solid lighten(@selected, 10%);
        box-shadow: 0 0 1px 0 lighten(@selected, 10%);
      }
    }

    .actions {
      width: 90%;
      margin-left: 5%;
    }
  }

  #LayerBox {

    .layers {
      overflow-y: auto;
      background: @dark;
    }

    .LayerBoxLayer {
      background: @medium;
      border-bottom: 1px solid @dark;
      position: relative;
      float: left;
      width: 100%;
      height: 40px;

      &.selected {
        background: @selected;

        .preview {
          border: 1px solid @dark;
        }
      }

      .visibility {
        width: 24px;
        height: 40px;
        float: left;
        position: relative;

        input[type=checkbox] {
          -webkit-appearance: none;
          outline: none;
          cursor: pointer;
          float: left;
          width: 100%;
          height: 100%;
          line-height: 40px;
          margin: 0;
          text-align: center;
          color: @font-color;
          font-family: 'Flaticon';
          font-size: .8rem;
          .letterpress;
        }

        input[type=checkbox]:before {
          .icon-eye-slashed;
          color: darken(@font-color, 20%);
        }

        input[type=checkbox]:checked:before {
          .icon-eye;
          color: @font-color;
        }
      }

      .preview {
        width: 30px;
        height: 30px;
        margin: 4px 0;
        float: left;
        background: #fff;
        border: 1px solid @medium;
        cursor: pointer;
        box-sizing: content-box;
      }

      .name {
        width: 137px;
        height: 20px;
        float: left;
        margin-left: 5px;

        label {
          margin-top: 3px;
          margin-left: 1px;
        }

        input[type=text] {
          height: 13px;
          margin-top: 3px;
          width: 85px;
        }
      }

      .opacity-slider {
        margin-left: 5px;
        width: 90px;
        float: left;
      }

      .opacity-number {
        margin-left: 3px;
        height: 13px;
        float: left;
      }
    } // .LayerBoxLayer

    .dropzone {

      width: 100%;
      height: 10px;
      float: left;
      position: relative;

      &>div {
        height: 100%;
        pointer-events: none;
      }

      .dropzone-inner {
        background: lighten(@selected, 10%);
        box-shadow: 0 0 5px 0 lighten(@selected, 10%);
        position: absolute;

        &.left {
          top: 2px;
          left: 3px;
          width: 1px;
          height: 5px;
        }

        &.center {
          top: 4px;
          right: 7px;
          left: 4px;
          height: 1px;
        }

        &.right {
          top: 2px;
          right: 6px;
          width: 1px;
          height: 5px;
        }
      } // .dropzone-inner

    } // .dropzone

  } // #LayerBox

  .statusbar {
    left: 43px;
    right: 203px;
  }

  .bar > * {
    margin-left: 5px;
    float: left;
    min-width: 2rem;
  }

  #StatusBarColor {
    height: 16px;
    width: 16px;
    min-width: 16px;
    border: 1px solid @light;
    margin-top: 2px;
  }

  #StatusBarColorString {
    min-width: 5rem;
  }

  #StatusBarButtons {
    float: right;

    i {
      font-weight: lighter;
    }
  }

  .area.settings {
    z-index: 2;
    right: 207px;
    bottom: 26px;
    width: 200px;
    height: 200px;
    background: @dark;
  }

  .area.settings:after {
    background: none;
    width: 0;
    border-left: 1px solid #2d2d2d;
    border-right: 1px solid #3a3a3a;
    content: "";
    display: block;
    position: absolute;
    top: 0;
    left: 0;
    bottom: 0;
    pointer-events: none;
  }

  #SettingsBox {
    height: 100%;

    label {
      display: inline-block;
      margin: 0 1em;
      width: 6em;
      height: 26px;
      float: left;
      line-height: 26px;
    }

    button.background {
      width: 26px;
      height: 26px;
      margin-right: 4px;
    }

    div.background {
      width: 26px;
      height: 26px;
      margin: 0 4px 0 0;
      border: 1px solid #303030;
      border-radius: 2px;
      display: inline-block;
      position: relative;
      top: -2px;
      box-sizing: border-box;

      input {
        height: 100%;
        width: 100%;
        margin: 0;
        opacity: 0;
      }

      &:after {
        background: none;
        border-top: 1px solid #909090;
        border-bottom: 1px solid #6a6a6a;
        content: "";
        display: block;
        position: absolute;
        left: 0;
        top: 0;
        right: 0;
        bottom: -2px;
        pointer-events: none;
      }
    }

    .active {
      box-shadow: 0 0 5px 3px lighten(@selected, 10%);
    }
  }

  .debug {
    border: 1px solid red;
  }

} // .screen.paint

